@@ -28,3 +28,4 @@ Updates to src/gnuwin32 taken from 2.15.1 and 3.0.0.
 
 Added R_GetCurrentSrcref and R_GetSrcFilename from 2.15.1.
 
+Added show.error.locations from 2.15.1.
